; ModuleID = '/home/carl/AnghaBench/h2o/deps/mruby-digest/src/extr_digest.c_mrb_hmac_update.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/mruby-digest/src/extr_digest.c_mrb_hmac_update.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mrb_hmac = type { i32 }

@.str = private unnamed_addr constant [2 x i8] c"s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @mrb_hmac_update to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mrb_hmac_update(i32* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.mrb_hmac*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  %9 = load i32, i32* %5, align 4
  %10 = call i64 @DATA_PTR(i32 %9)
  %11 = inttoptr i64 %10 to %struct.mrb_hmac*
  store %struct.mrb_hmac* %11, %struct.mrb_hmac** %6, align 8
  %12 = load %struct.mrb_hmac*, %struct.mrb_hmac** %6, align 8
  %13 = icmp ne %struct.mrb_hmac* %12, null
  br i1 %13, label %16, label %14

14:                                               ; preds = %2
  %15 = call i32 (...) @mrb_nil_value()
  store i32 %15, i32* %3, align 4
  br label %25

16:                                               ; preds = %2
  %17 = load i32*, i32** %4, align 8
  %18 = call i32 @mrb_get_args(i32* %17, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i8** %8, i32* %7)
  %19 = load i32*, i32** %4, align 8
  %20 = load %struct.mrb_hmac*, %struct.mrb_hmac** %6, align 8
  %21 = load i8*, i8** %8, align 8
  %22 = load i32, i32* %7, align 4
  %23 = call i32 @lib_hmac_update(i32* %19, %struct.mrb_hmac* %20, i8* %21, i32 %22)
  %24 = load i32, i32* %5, align 4
  store i32 %24, i32* %3, align 4
  br label %25

25:                                               ; preds = %16, %14
  %26 = load i32, i32* %3, align 4
  ret i32 %26
}

declare dso_local i64 @DATA_PTR(i32) #1

declare dso_local i32 @mrb_nil_value(...) #1

declare dso_local i32 @mrb_get_args(i32*, i8*, i8**, i32*) #1

declare dso_local i32 @lib_hmac_update(i32*, %struct.mrb_hmac*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
